methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:4: error: type mismatch;
 found   : Int(0)
 required: Boolean
  if(vuBiscuit = 0){
                 ^